# lasR

./: pkgdown.yml  search.json
.github/workflows/: pylasr.yaml  pylasr2.yml
articles/: tutorial.html  tutorial.md
python/: CMakeLists.txt  MANIFEST.in  bindings.cpp  pyproject.toml  setup.py  tutorial_python.md
python/tests/: test_basic_import.py  test_functions.py  test_integration.py
reference/: add_rgb.html  add_rgb.md  dsm.html  dsm.md  dtm.html  dtm.md  filters.html  filters.md  focal.html  focal.md  hag.html  hag.md  load_matrix.html  load_matrix.md  local_maximum.html  local_maximum.md  metric_engine.html  metric_engine.md  rasterize.html  rasterize.md  read_cloud.html  read_cloud.md  temporary_files.html  temporary_files.md  tools.html  tools.md  transform_with.html  transform_with.md  write.html  write.md
src/LASRcore/: openmp.cpp
